[gd_scene load_steps=13 format=2]

[ext_resource path="res://Interfaces/CentralPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Geral/NUMBER_PANEL.png" type="Texture" id=2]
[ext_resource path="res://Assets/Geral/TRIANGLE_BUT.png" type="Texture" id=3]
[ext_resource path="res://Interfaces/HologramLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Geral/NUMBER_PANEL_HOLOGRAM.png" type="Texture" id=5]
[ext_resource path="res://Assets/Geral/NUMBER_BUT.png" type="Texture" id=6]
[ext_resource path="res://Assets/Geral/TRIANGLE_BUT_DOWN.png" type="Texture" id=7]
[ext_resource path="res://Assets/Geral/NUMBER_BUT_DOWN.png" type="Texture" id=8]
[ext_resource path="res://Assets/Geral/1_BUT_DOWN.png" type="Texture" id=9]
[ext_resource path="res://Assets/Geral/0_BUT.png" type="Texture" id=10]
[ext_resource path="res://Assets/Geral/1_BUT.png" type="Texture" id=11]
[ext_resource path="res://Assets/Geral/0_BUT_DOWN.png" type="Texture" id=12]

[node name="CentralPanel" type="Node2D"]
script = ExtResource( 1 )

[node name="Add" type="TextureButton" parent="."]
margin_left = -122.127
margin_top = 39.3268
margin_right = -9.12703
margin_bottom = 93.3268
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add2" type="TextureButton" parent="."]
margin_left = 120.231
margin_top = 39.3267
margin_right = 233.231
margin_bottom = 93.3267
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="TextureButton" parent="."]
margin_left = -358.244
margin_top = -53.7431
margin_right = -156.244
margin_bottom = 76.2569
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit2" type="TextureButton" parent="."]
margin_left = 352.78
margin_top = -52.5153
margin_right = 554.78
margin_bottom = 77.4847
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.06586, -21.7953 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -1.96533, -22.2326 )
texture = ExtResource( 5 )

[node name="Label" parent="." instance=ExtResource( 4 )]
margin_left = -72.7248
margin_top = -65.0
margin_right = -34.7248
margin_bottom = 16.0
text = "0"

[node name="Label2" parent="." instance=ExtResource( 4 )]
margin_left = 33.2412
margin_top = -65.0
margin_right = 71.2412
margin_bottom = 16.0
text = "0"

[node name="Binary0" type="TextureButton" parent="."]
margin_left = -430.402
margin_top = 49.7222
margin_right = -370.402
margin_bottom = 89.7222
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Binary1" type="TextureButton" parent="."]
margin_left = -486.845
margin_top = 49.6654
margin_right = -426.845
margin_bottom = 89.6654
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Add" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Add2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="Submit2" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="Binary0" to="." method="_on_Binary_pressed"]
[connection signal="pressed" from="Binary1" to="." method="_on_Binary_pressed"]
